Fix suggest card to not stretch on a large screen. Add class.

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -311,6 +311,10 @@ main {
   font-style: thin;
   margin-bottom: 0;
 }
+.suggest-card {
+  max-width: 300px !important;
+
+}
 
 /*========create-recipes=========*/
 
